[package]
name = "mu_app"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
camino.workspace = true
clap.workspace = true
mu_assets = { path = "../mu_assets" }
mu_audio = { path = "../mu_audio" }
mu_input = { path = "../mu_input" }
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
