[package]
name = "mu_asset_pipeline"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
camino.workspace = true
clap.workspace = true
image = { version = "0.25", default-features = false, features = ["bmp", "jpeg", "png", "tga"] }
mu_assets = { path = "../mu_assets" }
serde_json.workspace = true
thiserror.workspace = true
